Added Main Page Layout
Added a basic layout for the app

--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
         onSuccess: function (result) {
 			var accessToken = result.getAccessToken().getJwtToken();
 			console.log(accessToken);	
-			window.open("file:profile.html");
+			window.open("file:main.html");
         },
 
         onFailure: function(err) {
